--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "12.2.2",
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
