--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2"
   }
-
 }
